Add about play section

--- a/playground.html
+++ b/playground.html
@@ -48,8 +48,15 @@
       <p>Hundred acres of joy! Features Include: Agility taster course, dig-pit, scent pots, living-willow dome and tunnels, wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.</p>
     </div>
     <div class="play-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quos voluptate inventore dolor aliquam, id at provident enim neque. Earum sint nemo excepturi consequuntur laborum! Dolores quae aut similique repudiandae?</p>
+      <p class="playground-title">WHY DO DOGS NEED TO PLAY?</p>
     </div>
+    <div class="p-reason">
+      <div> <strong>Physical health.</strong> Active play helps keep your dog's heart healthy, keeps the joints lubricated, and improves his overall balance and coordination.</div>
+      <div> <strong>Mental health.</strong> Games with rules force your dog to use his brain, not just his body. This can help keep his mind sharp and focused.</div>
+      <div><strong>Social skills.</strong> When your dog plays with other dogs and other people, it helps improve his overall social skills. He learns basic rules and how to play by them.</div>
+      <div><strong>Your health.</strong> What better way to alleviate the stress of a busy workday and get a bit of exercise than to come home and play with your dog? It's a win-win for both of you.</div>
+    </div>
+    <div></div>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
