Add two images to playground page

--- a/playground.html
+++ b/playground.html
@@ -51,12 +51,13 @@
       <p class="playground-title">WHY DO DOGS NEED TO PLAY?</p>
     </div>
     <div class="p-reason">
-      <div> <strong>Physical health.</strong> Active play helps keep your dog's heart healthy, keeps the joints lubricated, and improves his overall balance and coordination.</div>
-      <div> <strong>Mental health.</strong> Games with rules force your dog to use his brain, not just his body. This can help keep his mind sharp and focused.</div>
-      <div><strong>Social skills.</strong> When your dog plays with other dogs and other people, it helps improve his overall social skills. He learns basic rules and how to play by them.</div>
-      <div><strong>Your health.</strong> What better way to alleviate the stress of a busy workday and get a bit of exercise than to come home and play with your dog? It's a win-win for both of you.</div>
+      <div><p><strong>Physical health.</strong> Active play helps keep your dog's heart healthy, keeps the joints lubricated, and improves his overall balance and coordination.</p></div>
+      <div><p><strong>Mental health.</strong> Games with rules force your dog to use his brain, not just his body. This can help keep his mind sharp and focused.</p></div>
+      <div><p><strong>Social skills.</strong> When your dog plays with other dogs and other people, it helps improve his overall social skills. He learns basic rules and how to play by them.</p></div>
+      <div><p><strong>Your health.</strong> What better way to alleviate the stress of a busy workday and get a bit of exercise than to come home and play with your dog? It's a win-win for both of you.</p></div>
     </div>
-    <div></div>
+    <div class="play-image"><img src="assets/images/playground-img.jpg" alt="An image of two swings, and a house with a slide on a playground" class="swing">
+    <img src="assets/images/park-bench-img.jpg" alt="An image of a park bench on a sunny day" class="bench"></div>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
