Add images, text and table to gym page

--- a/gym.html
+++ b/gym.html
@@ -45,7 +45,75 @@
     </header>
     <h2 class="intro-text-box1">Get your pup pumpin!</h2>
     <span class="weight"><img src="assets/images/weight-icon.png" alt="Black and white icon of a free weight"></span>
-
+    <div class="gym-container">
+        <img src="assets/images/gym-pug-img.jpg" alt="Illustration of a pug dog lifting a weight">
+        <div class="gym-box">PupPower <i class="fa-solid fa-paw"></i>Fitness Gym and Quality training in a high-energy and supportive atmosphere.</div>
+        <div class="gym-box1">Click <a href="form.html">here</a> and register now!</div>
+    </div>
+    <div class="gym-grid">
+        <p class="text-gym1">Exercising keeps your dog healthy and limber while reducing behavioural problems such as excessive licking, barking, chewing, digging, and other anxiety-related behaviours. It also helps your dog build trust and confidence in you and in their environment</p>
+        <p class="text-gym2">The recommended amount of daily exercise for most dogs is 30 minutes to 2 hours, although certain dogs need more. Some breeds were developed for more active lifestyles than others, and in a companion dog situation, they are not able to do the work their ancestors were bred to do</p>
+        <p class="text-gym3">Some countries have tried to make dog excercising a matter of law. In 2020, a law was introduced in Germany that mandated the country’s dog owners walk their dogs twice a day for at least an hour total. As the minister responsible for the bill noted, “Dogs are not cuddly toys. They also have their own needs, which need to be taken into account.”</p>
+        <p class="text-gym4">For active, healthy dogs, a variety of exercise is important, says Dr. Darryl Millis, DVM, Diplomate of  the American College of Veterinary Surgeons and the American College of Veterinary Sports Medicine and Rehabilitation, and a Certified Canine Rehabilitation Practitioner. “Dogs are aerobic animals and are built for jogging and running distances, with periodic rest. So leash walking alone will not result in peak conditioning.”</p>
+    </div>
+    <div><p class="playground-title">MORE THAN 150 MACHINES & TOYS</p></div>
+    <p class="text-g">Our trainers give you the quality instruction and practical tips you need to achieve your goals. Whether you want to get healthier, expand your workout routines, or compete at the next level, PupPower Gym will help you crush your fitness goals.</p>
+    <p class="text-g">We offer a robust range of <strong>classes</strong> including Kickboxing, Fast Track, Power Track, Boxing, Muay Thai, Brazilian Jiu Jitsu, Yoga, MMA, and Youth Classes. With so many training options over multiple disciplines, you will unleash your inner warrior! Check below!</p>
+    <table class="classes-table">
+        <thead>
+            <tr>
+                <th>DAYS</th>
+              <th>CLASS</th>
+              <th>COACH</th>
+              <th>TIME</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="unpair">
+              <td>Monday</td>
+              <td>Yoga</td>
+              <td>Joanne Lewinski</td>
+              <td>20:00 - 21:00</td>
+            </tr>
+            <tr class="pair">
+                <td>Tuesday</td>
+                <td>Kick-box</td>
+              <td>Thomas O'Connor</td>
+              <td>18:00 - 19:30</td>
+            </tr>
+            <tr class="unpair">
+                <td>Wednesday</td>
+                <td>Conditioning</td>
+              <td>Love Dunne</td>
+              <td>19:00 - 20:00</td>
+            </tr>
+            <tr class="pair">
+                <td>Thursday</td>
+                <td>Pilates</td>
+              <td>Abigail Mahoney</td>
+              <td>17:00 - 18:00
+              </td>
+            </tr>
+            <tr class="unpair">
+                <td>Friday</td>
+                <td>Mobility</td>
+                <td>Mark Taylor</td>
+                <td>12:00 - 13:30</td>
+            </tr>
+            <tr class="pair">
+                <td>Saturday</td>
+                <td>Strenght</td>
+                <td>Joe D'Amato</td>
+                <td>11:00 - 12:00</td>
+            </tr>
+            <tr class="unpair">
+                <td>Sunday</td>
+                <td>Yoga</td>
+                <td>Joanne Lewinski</td>
+              <td>20:00 - 21:00</td>
+            </tr>
+        </tbody>
+          </table>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
