Add yoga-dog image on gym page

--- a/gym.html
+++ b/gym.html
@@ -114,6 +114,7 @@
             </tr>
         </tbody>
           </table>
+    <div class="yoga-dog"><img src="assets/images/yoga-dog-img.png" alt="Illustration of Border Collie dog doing yoga poses"></div>
     <footer>
         <ul class="footer">CONTACT US!
             <li>Email: customer-service@puppower.com</li>
