Add content on bar page, edit footer

--- a/playground.html
+++ b/playground.html
@@ -73,6 +73,7 @@
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
             <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
+            <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
         </ul>
     </footer>
     <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
