Add icon on playground page, edit text across website

--- a/playground.html
+++ b/playground.html
@@ -45,7 +45,9 @@
     </header>
     <h2 class="intro-text-box1">A play a day keeps the vet away!</h2>
     <div class="container-play">
-      <p>Hundred acres of joy! Features Include: Agility taster course, dig-pit, scent pots, living-willow dome and tunnels, wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.</p>
+      <p>Hundred acres of joy! Features Include: Agility taster course, dig-pit, scent pots, living-willow dome and tunnels, 
+        wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.
+        <img src="assets/images/agility-icon.png" alt="Icon of dog agility course" id="agility"></p>
     </div>
     <div class="play-text">
       <p class="playground-title">WHY DO DOGS NEED TO PLAY?</p>
@@ -66,7 +68,8 @@
     <h4>How much exercise and play is appropriate?</h4>
     <p>Similar to humans, a dog’s exercise needs will vary depending on age, size, and overall health. “Typically your dog should spend anywhere between 30 minutes to two hours on any type of physical activity whether it be walking, chasing a toy, or sprinting in the backyard or dog park,” says Dr. Freeman.For purebred dogs, consider their traditional purpose and the normal amount of energy that would be expended in that occupation when deciding the type and amount of play to provide. For example, the retrieving breeds do best with lengthy games of fetch or “Frisbee,” while the sledding breeds might prefer pulling carts, or running or jogging with an active owner. Terriers may prefer sniffing and catching “prey,” while herding breeds might be suited to focused training and agility.</p>
     <h4>What type of play should be avoided?</h4>
-    <p>Try to avoid games that pit your strength against your puppy or dog. Tug games seem to be an enjoyable diversion for many puppies and dogs and they do help to direct chewing and biting toward an acceptable play object, rather than an owner’s hands or clothing.On the other hand, some pets get very excited, overly stimulated and begin to grab the owners or their clothing during the game. At this point the game must immediately cease and only resume if the dog can learn to keep its mouth on the toy. In addition, don’t allow your puppy to demand or initiate tug games since this could escalate to pulling on you or your clothing or stealing towels or clothing items to try and get you to play. You should always schedule and initiate these games. Teaching the dog to “drop” on command before beginning the tug games can help to ensure that you remain in control of object play sessions such as fetch and tug.</p>
+    <p>Try to avoid games that pit your strength against your puppy or dog. Tug games seem to be an enjoyable diversion for many puppies and dogs and they do help to direct chewing and biting toward an acceptable play object, rather than an owner’s hands or clothing.On the other hand, some pets get very excited, overly stimulated and begin to grab the owners or their clothing during the game. At this point the game must immediately cease and only resume if the dog can learn to keep its mouth on the toy. In addition, don’t allow your puppy to demand or initiate tug games since this could escalate to pulling on you or your clothing or stealing towels or clothing items to try and get you to play. You should always schedule and initiate these games. Teaching the dog to “drop” on command before beginning the tug games can help to ensure that you remain in control of object play sessions such as fetch and tug.
+    </p>
   </div>
     <footer>
         <ul class="footer">CONTACT US!
