--- a/pool.html
+++ b/pool.html
@@ -102,17 +102,7 @@
         </tbody>
           </table>
           <div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, sint. 
-              Laudantium rerum modi sunt quod qudipisicing elit. Temporibus, sint. 
-              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
-              id dolorem error. Vero sunt laborum iusto.dipisicing elit. Temporibus, sint. 
-              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
-              id dolorem error. Vero sunt laborum iusto.dipisicing elit. Temporibus, sint. 
-              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
-              id dolorem error. Vero sunt laborum iusto.os possimus enim nam accusamus facilis aliquam molestias, 
-              id dolorem error. Vero sunt laborumdipisicing elit. Temporibus, sint. 
-              Laudantium rerum modi sunt quod quos possimus enim nam accusamus facilis aliquam molestias, 
-              id dolorem error. Vero sunt laborum iusto. iusto.</p>
+            <p class="why-swim">Swimming is one of the best, most complete forms of exercise for your dog. Just one minute of swimming equates to four minutes of running! It provides numerous health benefits, including strengthening the heart and lungs, decreasing inflammation, increasing metabolism, and improving circulation which helps keep the skin and coat healthy. Plus, moving their limbs against the resistance of the water uses every major muscle group, improving overall tone and strength. All this adds up to a healthy, happy dog who can run, play, and have fun for longer with less risk of injury.Swimming in warm water can be an excellent form of therapeutic exercise for dogs, aiding in the recovery process by strengthening joints, facilitating circulation, and helping fortify muscles. </p>
           </div>
     </div>
     <div id="swim">
@@ -148,7 +138,8 @@
         </p>
     </div>
     <div class="g-pinscher" id="g-p">
-      <div id="inner-pool"><img src="assets/images/inner-pool.jpg" alt="Iner pool"></div>
+      <div id="inner-pool"><img src="assets/images/inner-pool.jpg" alt="Inner pool with chairs">
+      <p>P.S. Our inner pools are open!</p></div>
     </div>
     <footer id="footer">
         <ul class="footer" id="footer-p">CONTACT US!
