Change borders on images

--- a/playground.html
+++ b/playground.html
@@ -59,7 +59,8 @@
       <div><p><strong>Your health.</strong> What better way to alleviate the stress of a busy workday and get a bit of exercise than to come home and play with your dog? It's a win-win for both of you.</p></div>
     </div>
     <div class="play-image"><img src="assets/images/playground-img.jpg" alt="An image of two swings, and a house with a slide on a playground" class="swing">
-    <img src="assets/images/park-bench-img.jpg" alt="An image of a park bench on a sunny day" class="bench"></div>
+    <img src="assets/images/park-bench-img.jpg" alt="An image of a park bench on a sunny day" class="bench">
+  <div></div></div>
     <div class="p-article"> <p class="playground-title">DOG BEHAVIOUR & TRAINING</p>
     </div> 
     <div class="questions">
