Edit images responsivity

--- a/playground.html
+++ b/playground.html
@@ -46,8 +46,7 @@
     <h2 class="intro-text-box1">A play a day keeps the vet away!</h2>
     <div class="container-play">
       <p>Hundred acres of joy! Features Include: Agility taster course, dig-pit, scent pots, living-willow dome and tunnels, 
-        wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.
-        <img src="assets/images/agility-icon.png" alt="Icon of dog agility course" id="agility"></p>
+        wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.</p>
     </div>
     <div class="play-text">
       <p class="playground-title">WHY DO DOGS NEED TO PLAY?</p>
