--- a/bar.html
+++ b/bar.html
@@ -7,16 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script>function myFunction() {
-        var x = document.getElementById("myLinks");
-        if (x.style.display === "block") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "block";
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
         }
-      }</script>
+    </script>
     <title>Pup Power</title>
-</head> 
+</head>
 
 <body id="bar">
     <header>
@@ -29,59 +31,60 @@
                 <li class="bar"><a href="bar.html">BAR</a></li>
             </ul>
         </nav>
-<!-- Top Navigation Hamburger Menu -->
-    <div class="topnav">
-    <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
-    <div id="myLinks">
-    <a href="index.html">HOME</a>
-    <a href="pool.html">POOL</a>
-      <a href="playground.html">PLAYGROUND</a>
-      <a href="gym.html">GYM</a>
-      <a href="bar.html">BAR</a>
-    </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
+        <!-- Top Navigation Hamburger Menu -->
+        <div class="topnav">
+            <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
+            <div id="myLinks">
+                <a href="index.html">HOME</a>
+                <a href="pool.html">POOL</a>
+                <a href="playground.html">PLAYGROUND</a>
+                <a href="gym.html">GYM</a>
+                <a href="bar.html">BAR</a>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
     </header>
     <h2 class="intro-text-box">What can we get you?</h2>
-<div class="bar-container">
-    <div class="food-menu">
-        <ul id="food">
-            <li class="menu-title">ALL DAY DOGGY DINNING MENU</li>
-            <li><br></li>
-            <li> <strong>MAIN</strong></li>
-            <li>Beef Bones</li>
-            <li>Meat sticks</li>
-            <li>Pork Sausages</li>
-            <li>Chicken breast</li>
-            <li>Salmon fillets</li>
-            <li>Beef Sticks</li>
-            <li><br></li>
-            <li><strong>SIDE</strong></li>
-            <li>Carrots</li>
-            <li>Sweet Potato</li>
-            <li>Rice</li>
-            <li>Broccoli</li>
-            <li><br></li>
-            <li> <strong>DRINKS</strong></li>
-            <li>Fresh Water</li>
-            <li>Vegetable Juice</li>
-            <li>Puppachino</li>
-        </ul>
+    <div class="bar-container">
+        <div class="food-menu">
+            <ul id="food">
+                <li class="menu-title">ALL DAY DOGGY DINNING MENU</li>
+                <li><br></li>
+                <li> <strong>MAIN</strong></li>
+                <li>Beef Bones</li>
+                <li>Meat sticks</li>
+                <li>Pork Sausages</li>
+                <li>Chicken breast</li>
+                <li>Salmon fillets</li>
+                <li>Beef Sticks</li>
+                <li><br></li>
+                <li><strong>SIDE</strong></li>
+                <li>Carrots</li>
+                <li>Sweet Potato</li>
+                <li>Rice</li>
+                <li>Broccoli</li>
+                <li><br></li>
+                <li> <strong>DRINKS</strong></li>
+                <li>Fresh Water</li>
+                <li>Vegetable Juice</li>
+                <li>Puppachino</li>
+            </ul>
+        </div>
+        <div class="dog-left">
+            <p> <strong>All You Can Chew</strong>served everyday from 12:00 - 19:00!
+                Our fresh ingredients are locally sourced and 100% MSG Free.
+                Fast, Authentic,Hearty & Healthy.
+            </p>
+        </div>
+        <div class="dog-right">
+            <p>It’s all about fresh, tasty food cooked to order in minutes. We are fast food, but not as you know it.
+                Don't forget your <strong>free</strong> Puppachino while you're here! <a href="index.html">Check
+                    here</a>
+            </p>
+        </div>
     </div>
-    <div class="dog-left">
-        <p> <strong>All You Can Chew</strong>served everyday from 12:00 - 19:00!
-            Our fresh ingredients are locally sourced and 100% MSG Free.
-            Fast, Authentic,Hearty & Healthy.
-        </p>
-    </div>
-    <div class="dog-right">
-        <p>It’s all about fresh, tasty food cooked to order in minutes. We are fast food, but not as you know it.
-            Don't forget your <strong>free</strong> Puppachino while you're here! <a href="index.html">Check here</a>
-        </p>
-    </div>
-</div>
 
     <footer>
         <ul class="footer">CONTACT US!
