--- a/form.html
+++ b/form.html
@@ -2,117 +2,120 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script>function myFunction() {
-        var x = document.getElementById("myLinks");
-        if (x.style.display === "block") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "block";
-        }
-      }</script>
-    <title>Pup Power</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+  </script>
+  <title>Pup Power</title>
 </head>
 
 <body class="background">
-    <header>
-        <nav class="nav">
-            <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-                <li class="home"><a href="index.html">HOME</a></li>
-                <li class="pool"><a href="pool.html">POOL</a></li>
-                <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
-                <li class="gym"><a href="gym.html">GYM</a></li>
-                <li class="bar"><a href="bar.html">BAR</a></li>
-            </ul>
-        </nav>
-<!-- Top Navigation Hamburger Menu -->
+  <header>
+    <nav class="nav">
+      <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+        <li class="home"><a href="index.html">HOME</a></li>
+        <li class="pool"><a href="pool.html">POOL</a></li>
+        <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
+        <li class="gym"><a href="gym.html">GYM</a></li>
+        <li class="bar"><a href="bar.html">BAR</a></li>
+      </ul>
+    </nav>
+    <!-- Top Navigation Hamburger Menu -->
     <div class="topnav">
-    <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
-    <div id="myLinks">
-    <a href="index.html">HOME</a>
-    <a href="pool.html">POOL</a>
-      <a href="playground.html">PLAYGROUND</a>
-      <a href="gym.html">GYM</a>
-      <a href="bar.html">BAR</a>
+      <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
+      <div id="myLinks">
+        <a href="index.html">HOME</a>
+        <a href="pool.html">POOL</a>
+        <a href="playground.html">PLAYGROUND</a>
+        <a href="gym.html">GYM</a>
+        <a href="bar.html">BAR</a>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
     </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
-    </header>
-<body id="form">
-  <main id="main-form">
-    <form action="#" method="post">
-      <fieldset class="join-form">
-        <legend id="form-title">Register to join us!</legend>
-        <div class="fieldinput">
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name" required>
-        </div>
-        <div class="fieldinput">
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name" required>
-        </div>
-        <div class="fieldinput">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder=" Please enter your email" required>
-        </div>
-        <div class="fieldinput">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" placeholder=" Please enter your password" required>
-        </div>
-        <div class="fieldinput">
-          <label for="dog-breed">Select Dog Breed:</label>
-          <select name="dog-breed" id="dog-breed">
-            <option value="select">Select</option>
-            <option value="american-staffordshire-terrier">American Staffordshire Terrier</option>
-            <option value="pitbull">Pitbull</option>
-            <option value="golden-retriever">Golden Retriever</option>
-            <option value="chihuahua">Chihuahua</option>
-            <option value="jack-russel">Jack Russel</option>
-            <option value="samoyed">Samoyed</option>
-            <option value="other">Other</option>
-          </select>
-        </div>
-        <div class="fieldinput">
-          <label for="gender">Select Gender:</label>
-          <select>
-            <option value="select">Select</option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-          </select>
-        </div>
-        <div class="fieldinput">
-          <label for="phone-number">Phone Number</label>
-          <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number"
-            required>
-        </div>
-        <div class="fieldinput">
-          <input type="checkbox" id="checkbox" name="checkbox" required>
-          <label for="checkbox">I agree to terms and conditions
-          </label>
-        </div>
-        <div class="fieldinput">
-          <button class="btn" type="submit">Join Now</button>
-          <input type="reset" value="Reset Form" class="btn">
-        </div>
-      </fieldset>
-    </form>
-    <div class="footer-img"></div>
-  </main>
-  <footer>
-    <ul class="footer">CONTACT US!
-      <li>Email: customer-service@puppower.com</li>
-      <li>Tel: +353 83 1234 567</li>
-      <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
-      <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
-    </ul>
-  </footer>
-  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
-</body>
+  </header>
+
+  <body id="form">
+    <main id="main-form">
+      <form action="#" method="post">
+        <fieldset class="join-form">
+          <legend id="form-title">Register to join us!</legend>
+          <div class="fieldinput">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name" required>
+          </div>
+          <div class="fieldinput">
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name" required>
+          </div>
+          <div class="fieldinput">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder=" Please enter your email" required>
+          </div>
+          <div class="fieldinput">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder=" Please enter your password" required>
+          </div>
+          <div class="fieldinput">
+            <label for="dog-breed">Select Dog Breed:</label>
+            <select name="dog-breed" id="dog-breed">
+              <option value="select">Select</option>
+              <option value="american-staffordshire-terrier">American Staffordshire Terrier</option>
+              <option value="pitbull">Pitbull</option>
+              <option value="golden-retriever">Golden Retriever</option>
+              <option value="chihuahua">Chihuahua</option>
+              <option value="jack-russel">Jack Russel</option>
+              <option value="samoyed">Samoyed</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
+          <div class="fieldinput">
+            <label for="gender">Select Gender:</label>
+            <select>
+              <option value="select">Select</option>
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+            </select>
+          </div>
+          <div class="fieldinput">
+            <label for="phone-number">Phone Number</label>
+            <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number"
+              required>
+          </div>
+          <div class="fieldinput">
+            <input type="checkbox" id="checkbox" name="checkbox" required>
+            <label for="checkbox">I agree to terms and conditions
+            </label>
+          </div>
+          <div class="fieldinput">
+            <button class="btn" type="submit">Join Now</button>
+            <input type="reset" value="Reset Form" class="btn">
+          </div>
+        </fieldset>
+      </form>
+      <div class="footer-img"></div>
+    </main>
+    <footer>
+      <ul class="footer">CONTACT US!
+        <li>Email: customer-service@puppower.com</li>
+        <li>Tel: +353 83 1234 567</li>
+        <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
+        <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
+      </ul>
+    </footer>
+    <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
+  </body>
 
 </html>
