--- a/playground.html
+++ b/playground.html
@@ -2,84 +2,124 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script>function myFunction() {
-        var x = document.getElementById("myLinks");
-        if (x.style.display === "block") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "block";
-        }
-      }</script>
-    <title>Pup Power</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+  </script>
+  <title>Pup Power</title>
 </head>
 
 <body id="playground">
-    <header>
-        <nav class="nav">
-            <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
-                <li class="home"><a href="index.html">HOME</a></li>
-                <li class="pool"><a href="pool.html">POOL</a></li>
-                <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
-                <li class="gym"><a href="gym.html">GYM</a></li>
-                <li class="bar"><a href="bar.html">BAR</a></li>
-            </ul>
-        </nav>
-<!-- Top Navigation Hamburger Menu -->
+  <header>
+    <nav class="nav">
+      <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+        <li class="home"><a href="index.html">HOME</a></li>
+        <li class="pool"><a href="pool.html">POOL</a></li>
+        <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
+        <li class="gym"><a href="gym.html">GYM</a></li>
+        <li class="bar"><a href="bar.html">BAR</a></li>
+      </ul>
+    </nav>
+    <!-- Top Navigation Hamburger Menu -->
     <div class="topnav">
-    <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
-    <div id="myLinks">
-    <a href="index.html">HOME</a>
-    <a href="pool.html">POOL</a>
-      <a href="playground.html">PLAYGROUND</a>
-      <a href="gym.html">GYM</a>
-      <a href="bar.html">BAR</a>
+      <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
+      <div id="myLinks">
+        <a href="index.html">HOME</a>
+        <a href="pool.html">POOL</a>
+        <a href="playground.html">PLAYGROUND</a>
+        <a href="gym.html">GYM</a>
+        <a href="bar.html">BAR</a>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+  </header>
+  <h2 class="intro-text-box1">A play a day keeps the vet away!</h2>
+  <div class="container-play">
+    <p>Hundred acres of joy! Features Include: Agility taster course, dig-pit, scent pots, living-willow dome and
+      tunnels,
+      wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.</p>
+  </div>
+  <div class="play-text">
+    <p class="playground-title">WHY DO DOGS NEED TO PLAY?</p>
+  </div>
+  <div class="p-reason">
+    <div>
+      <p><strong>Physical health.</strong> Active play helps keep your dog's heart healthy, keeps the joints lubricated,
+        and improves his overall balance and coordination.</p>
     </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-    </header>
-    <h2 class="intro-text-box1">A play a day keeps the vet away!</h2>
-    <div class="container-play">
-      <p>Hundred acres of joy! Features Include: Agility taster course, dig-pit, scent pots, living-willow dome and tunnels, 
-        wooden bridge, weave poles, tree walk, wobble-board, plastic tunnels, cavaletti jumps, tyre ring.</p>
+    <div>
+      <p><strong>Mental health.</strong> Games with rules force your dog to use his brain, not just his body. This can
+        help keep his mind sharp and focused.</p>
     </div>
-    <div class="play-text">
-      <p class="playground-title">WHY DO DOGS NEED TO PLAY?</p>
+    <div>
+      <p><strong>Social skills.</strong> When your dog plays with other dogs and other people, it helps improve his
+        overall social skills. He learns basic rules and how to play by them.</p>
     </div>
-    <div class="p-reason">
-      <div><p><strong>Physical health.</strong> Active play helps keep your dog's heart healthy, keeps the joints lubricated, and improves his overall balance and coordination.</p></div>
-      <div><p><strong>Mental health.</strong> Games with rules force your dog to use his brain, not just his body. This can help keep his mind sharp and focused.</p></div>
-      <div><p><strong>Social skills.</strong> When your dog plays with other dogs and other people, it helps improve his overall social skills. He learns basic rules and how to play by them.</p></div>
-      <div><p><strong>Your health.</strong> What better way to alleviate the stress of a busy workday and get a bit of exercise than to come home and play with your dog? It's a win-win for both of you.</p></div>
+    <div>
+      <p><strong>Your health.</strong> What better way to alleviate the stress of a busy workday and get a bit of
+        exercise than to come home and play with your dog? It's a win-win for both of you.</p>
     </div>
-    <div class="play-image"><img src="assets/images/playground-img.jpg" alt="An image of two swings, and a house with a slide on a playground" class="swing">
+  </div>
+  <div class="play-image"><img src="assets/images/playground-img.jpg"
+      alt="An image of two swings, and a house with a slide on a playground" class="swing">
     <img src="assets/images/park-bench-img.jpg" alt="An image of a park bench on a sunny day" class="bench">
-  <div></div></div>
-    <div class="p-article"> <p class="playground-title">DOG BEHAVIOUR & TRAINING</p>
-    </div> 
-    <div class="questions">
+  </div>
+  <div class="p-article">
+    <p class="playground-title">DOG BEHAVIOUR & TRAINING</p>
+  </div>
+  <div class="questions">
     <h4>What are good ways to play with and exercise my puppy or dog?</h4>
-    <p>Selecting an appropriate amount and type of play and exercise will depend on the type of dog. Puppies and adult dogs from breeds that have been bred for their stamina or are “working breeds” often have higher exercise requirements. For purebred dogs, consider their traditional purpose and the normal amount of energy that would be expended in that occupation when deciding the type and amount of play to provide.Practice walking skills in your own yard first. Put your puppy on a leash and, with your voice and a small tug, or perhaps a food or toy reward as a prompt, encourage it to follow you. Reward the good behavior with praise. Keep initial walks short to encourage compliance. For adult dogs that pull excessively, a head halter or a no-pull harness may help settle the dog and make walks more pleasant. Keep in mind that the walk does not have to be long. In fact, a short 10- to 15-minute “sniff” walk can be very enjoyable for your dog.</p>
+    <p>Selecting an appropriate amount and type of play and exercise will depend on the type of dog. Puppies and adult
+      dogs from breeds that have been bred for their stamina or are “working breeds” often have higher exercise
+      requirements. For purebred dogs, consider their traditional purpose and the normal amount of energy that would be
+      expended in that occupation when deciding the type and amount of play to provide.Practice walking skills in your
+      own yard first. Put your puppy on a leash and, with your voice and a small tug, or perhaps a food or toy reward as
+      a prompt, encourage it to follow you. Reward the good behavior with praise. Keep initial walks short to encourage
+      compliance. For adult dogs that pull excessively, a head halter or a no-pull harness may help settle the dog and
+      make walks more pleasant. Keep in mind that the walk does not have to be long. In fact, a short 10- to 15-minute
+      “sniff” walk can be very enjoyable for your dog.</p>
     <h4>How much exercise and play is appropriate?</h4>
-    <p>Similar to humans, a dog’s exercise needs will vary depending on age, size, and overall health. “Typically your dog should spend anywhere between 30 minutes to two hours on any type of physical activity whether it be walking, chasing a toy, or sprinting in the backyard or dog park,” says Dr. Freeman.For purebred dogs, consider their traditional purpose and the normal amount of energy that would be expended in that occupation when deciding the type and amount of play to provide. For example, the retrieving breeds do best with lengthy games of fetch or “Frisbee,” while the sledding breeds might prefer pulling carts, or running or jogging with an active owner. Terriers may prefer sniffing and catching “prey,” while herding breeds might be suited to focused training and agility.</p>
+    <p>Similar to humans, a dog’s exercise needs will vary depending on age, size, and overall health. “Typically your
+      dog should spend anywhere between 30 minutes to two hours on any type of physical activity whether it be walking,
+      chasing a toy, or sprinting in the backyard or dog park,” says Dr. Freeman.For purebred dogs, consider their
+      traditional purpose and the normal amount of energy that would be expended in that occupation when deciding the
+      type and amount of play to provide. For example, the retrieving breeds do best with lengthy games of fetch or
+      “Frisbee,” while the sledding breeds might prefer pulling carts, or running or jogging with an active owner.
+      Terriers may prefer sniffing and catching “prey,” while herding breeds might be suited to focused training and
+      agility.</p>
     <h4>What type of play should be avoided?</h4>
-    <p>Try to avoid games that pit your strength against your puppy or dog. Tug games seem to be an enjoyable diversion for many puppies and dogs and they do help to direct chewing and biting toward an acceptable play object, rather than an owner’s hands or clothing.On the other hand, some pets get very excited, overly stimulated and begin to grab the owners or their clothing during the game. At this point the game must immediately cease and only resume if the dog can learn to keep its mouth on the toy. In addition, don’t allow your puppy to demand or initiate tug games since this could escalate to pulling on you or your clothing or stealing towels or clothing items to try and get you to play. You should always schedule and initiate these games. Teaching the dog to “drop” on command before beginning the tug games can help to ensure that you remain in control of object play sessions such as fetch and tug.
+    <p>Try to avoid games that pit your strength against your puppy or dog. Tug games seem to be an enjoyable diversion
+      for many puppies and dogs and they do help to direct chewing and biting toward an acceptable play object, rather
+      than an owner’s hands or clothing.On the other hand, some pets get very excited, overly stimulated and begin to
+      grab the owners or their clothing during the game. At this point the game must immediately cease and only resume
+      if the dog can learn to keep its mouth on the toy. In addition, don’t allow your puppy to demand or initiate tug
+      games since this could escalate to pulling on you or your clothing or stealing towels or clothing items to try and
+      get you to play. You should always schedule and initiate these games. Teaching the dog to “drop” on command before
+      beginning the tug games can help to ensure that you remain in control of object play sessions such as fetch and
+      tug.
     </p>
   </div>
-    <footer>
-        <ul class="footer">CONTACT US!
-            <li>Email: customer-service@puppower.com</li>
-            <li>Tel: +353 83 1234 567</li>
-            <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
-            <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
-        </ul>
-    </footer>
-    <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
+  <footer>
+    <ul class="footer">CONTACT US!
+      <li>Email: customer-service@puppower.com</li>
+      <li>Tel: +353 83 1234 567</li>
+      <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
+      <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
+    </ul>
+  </footer>
+  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
