Change font size on pool page

--- a/pool.html
+++ b/pool.html
@@ -109,10 +109,7 @@
         swimming equates to four minutes of running! It provides numerous health benefits, including strengthening the
         heart and lungs, decreasing inflammation, increasing metabolism, and improving circulation which helps keep the
         skin and coat healthy. Plus, moving their limbs against the resistance of the water uses every major muscle
-        group, improving overall tone and strength. All this adds up to a healthy, happy dog who can run, play, and have
-        fun for longer with less risk of injury.Swimming in warm water can be an excellent form of therapeutic exercise
-        for dogs, aiding in the recovery process by strengthening joints, facilitating circulation, and helping fortify
-        muscles. </p>
+        group, improving overall tone and strength.</p>
     </div>
   </div>
   <div id="swim">
