Add UX in readme file

--- a/bar.html
+++ b/bar.html
@@ -47,11 +47,8 @@
         </div>
     </header>
     <h2 class="intro-text-box">What can we get you?</h2>
-    <div class="bar-container">
         <div class="food-menu">
             <ul id="food">
-                <li class="menu-title">ALL DAY DOGGY DINNING MENU</li>
-                <li><br></li>
                 <li> <strong>MAIN</strong></li>
                 <li>Beef Bones</li>
                 <li>Meat sticks</li>
@@ -79,12 +76,10 @@
             </p>
         </div>
         <div class="dog-right">
-            <p>It’s all about fresh, tasty food cooked to order in minutes. We are fast food, but not as you know it.
-                Don't forget your <strong>free</strong> Puppachino while you're here! <a href="index.html">Check
-                    here</a>
+            <p> We are fast food, but not as you know it. Don't forget your <strong>free</strong> Puppachino while you're here! <a href="index.html">Check
+                    conditions</a>
             </p>
         </div>
-    </div>
 
     <footer>
         <ul class="footer">CONTACT US!
