Add meta tag to all files

--- a/form.html
+++ b/form.html
@@ -18,6 +18,7 @@
     }
   </script>
   <title>Pup Power</title>
+  <meta name="description" content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
 
 <body class="background">
