--- a/playground.html
+++ b/playground.html
@@ -18,6 +18,7 @@
     }
   </script>
   <title>Pup Power</title>
+  <meta name="description" content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
 
 <body id="playground">
@@ -80,7 +81,7 @@
     <p class="playground-title">DOG BEHAVIOUR & TRAINING</p>
   </div>
   <div class="questions">
-    <h4>What are good ways to play with and exercise my puppy or dog?</h4>
+    <h3>What are good ways to play with and exercise my puppy or dog?</h3>
     <p>Selecting an appropriate amount and type of play and exercise will depend on the type of dog. Puppies and adult
       dogs from breeds that have been bred for their stamina or are “working breeds” often have higher exercise
       requirements. For purebred dogs, consider their traditional purpose and the normal amount of energy that would be
@@ -90,7 +91,7 @@
       compliance. For adult dogs that pull excessively, a head halter or a no-pull harness may help settle the dog and
       make walks more pleasant. Keep in mind that the walk does not have to be long. In fact, a short 10- to 15-minute
       “sniff” walk can be very enjoyable for your dog.</p>
-    <h4>How much exercise and play is appropriate?</h4>
+    <h3>How much exercise and play is appropriate?</h3>
     <p>Similar to humans, a dog’s exercise needs will vary depending on age, size, and overall health. “Typically your
       dog should spend anywhere between 30 minutes to two hours on any type of physical activity whether it be walking,
       chasing a toy, or sprinting in the backyard or dog park,” says Dr. Freeman.For purebred dogs, consider their
@@ -99,7 +100,7 @@
       “Frisbee,” while the sledding breeds might prefer pulling carts, or running or jogging with an active owner.
       Terriers may prefer sniffing and catching “prey,” while herding breeds might be suited to focused training and
       agility.</p>
-    <h4>What type of play should be avoided?</h4>
+    <h3>What type of play should be avoided?</h3>
     <p>Try to avoid games that pit your strength against your puppy or dog. Tug games seem to be an enjoyable diversion
       for many puppies and dogs and they do help to direct chewing and biting toward an acceptable play object, rather
       than an owner’s hands or clothing.On the other hand, some pets get very excited, overly stimulated and begin to
