Fix typing issues found in CSS and HTML validator

--- a/bar.html
+++ b/bar.html
@@ -24,7 +24,7 @@
 <body id="bar">
     <header>
         <nav class="nav">
-            <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+            <ul id="menu"><li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
                 <li class="home"><a href="index.html">HOME</a></li>
                 <li class="pool"><a href="pool.html">POOL</a></li>
                 <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -83,7 +83,8 @@
         </div>
 
     <footer>
-        <ul class="footer">CONTACT US!
+        <ul class="footer">
+            <li>CONTACT US!</li>
             <li>Email: customer-service@puppower.com</li>
             <li>Tel: +353 83 1234 567</li>
             <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
