--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 <body class="background">
   <header>
     <nav class="nav">
-      <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+      <ul id="menu"><li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
         <li class="home"><a href="index.html">HOME</a></li>
         <li class="pool"><a href="pool.html">POOL</a></li>
         <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -109,13 +109,14 @@
       <div class="footer-img"></div>
     </main>
     <footer>
-      <ul class="footer">CONTACT US!
-        <li>Email: customer-service@puppower.com</li>
-        <li>Tel: +353 83 1234 567</li>
-        <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
-        <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
+      <ul class="footer">
+          <li>CONTACT US!</li>
+          <li>Email: customer-service@puppower.com</li>
+          <li>Tel: +353 83 1234 567</li>
+          <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
+          <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
       </ul>
-    </footer>
+  </footer>
     <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
   </body>
 
