--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     }
   </script>
   <title>Pup Power</title>
-  <meta name="description" content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
+  <meta name="description"
+    content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
 
 <body class="background">
   <header>
     <nav class="nav">
-      <ul id="menu"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+      <ul id="menu">
+        <li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
         <li class="home"><a href="index.html">HOME</a></li>
         <li class="pool"><a href="pool.html">POOL</a></li>
         <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -83,7 +85,8 @@
     </p>
   </div>
   <footer>
-    <ul class="footer">CONTACT US!
+    <ul class="footer">
+      <li>CONTACT US!</li>
       <li>Email: customer-service@puppower.com</li>
       <li>Tel: +353 83 1234 567</li>
       <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
