--- a/pool.html
+++ b/pool.html
@@ -18,14 +18,16 @@
     }
   </script>
   <title>Pup Power</title>
-  <meta name="description" content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
+  <meta name="description"
+    content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
 
 <body id="pool-body">
   <header>
     <nav class="nav">
 
-      <ul id="menu" class="menu-p"><span id="logo">PUP POWER <i class="fa-solid fa-paw"></i></span>
+      <ul id="menu">
+        <li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
         <li class="home"><a href="index.html">HOME</a></li>
         <li class="pool"><a href="pool.html">POOL</a></li>
         <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -159,8 +161,9 @@
       <p>P.S. Our inner pools are open!</p>
     </div>
   </div>
-  <footer id="footer">
-    <ul class="footer" id="footer-p">CONTACT US!
+  <footer>
+    <ul class="footer">
+      <li>CONTACT US!</li>
       <li>Email: customer-service@puppower.com</li>
       <li>Tel: +353 83 1234 567</li>
       <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
