Compress all images

--- a/form.html
+++ b/form.html
@@ -117,7 +117,8 @@
           <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
       </ul>
   </footer>
-    <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async></script>
+  <script src="code.js" async></script>
   </body>
 
 </html>
