--- a/gym.html
+++ b/gym.html
@@ -7,21 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script>
-    function myFunction() {
-      var x = document.getElementById("myLinks");
-      if (x.style.display === "block") {
-        x.style.display = "none";
-      } else {
-        x.style.display = "block";
-      }
-    }
-  </script>
   <title>Pup Power</title>
   <meta name="description"
     content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
-
 <body id="gym">
   <header>
     <nav class="nav">
@@ -148,7 +137,8 @@
       <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
     </ul>
   </footer>
-  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async></script>
+  <script src="code.js" async></script>
 </body>
 
 </html>
