--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <meta name="description"
     content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
-
 <body class="background">
   <header>
     <nav class="nav">
@@ -83,8 +82,8 @@
       <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
     </ul>
   </footer>
-  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous"></script>
-  <script src="code.js"></script>
+  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async></script>
+  <script src="code.js" async></script>
 </body>
 
 </html>
